--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit as st
-import pandas as pd
+import streamlit 
+import pandas
 
-from sklearn.linear_model import LogisticRegression
+import LogisticRegression
 import joblib
