--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit 
-import pandas
+import streamlit as st
+import pandas as pd
 
-import LogisticRegression
+from sklearn.linear_model import LogisticRegression
 import joblib
