--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit as st
-import pandas as pd
+streamlit 
+pandas 
 
-from sklearn.linear_model import LogisticRegression
-import joblib
+sklearn
+joblib
